--- a/client/views/objects/objects.html
+++ b/client/views/objects/objects.html
@@ -1,25 +1,25 @@
-<template name="objectList">
+<template name="ObjectList">
   <div class="row">
     <ul class="thumbnails" id="ul-content">
-      {{#each unused_objects}}
+      {{#each objects}}
         <li>
-          {{>object}}
+          {{> Object}}
         </li>
       {{/each}}
     </ul>
   </div>
 </template>
 
-<template name="object">
+<template name="Object">
     <div class="thumbnail front">
       <div class="img" style="background-image:url({{image}})">
         <div class="map" id="map-canvas"></div>
         <div class="profile" id="profile-canvas"></div>
       </div>
       <div class='btn-toolbar like-buttons'>
-              <a class="btn btn-inverse btn-likeit" rel="tooltip" data-toggle="tooltip" data-placement="bottom" title="Like it!"><i class="icon-thumbs-up icon-white"></i>({{ likes }})</a>
-              <a class="btn btn-inverse btn-dislikeit" rel="tooltip" data-toggle="tooltip" data-placement="bottom" title="Unlike it!"><i class="icon-thumbs-down icon-white"></i>({{ dislikes }})</a>
-              <a class="btn btn-inverse btn-report" rel="tooltip" data-toggle="tooltip" data-placement="bottom" title="Report"><i class="icon-flag icon-white"></i>({{ spam }})</a>
+              <a class="btn btn-inverse btn-likeit" rel="tooltip" data-toggle="tooltip" data-placement="bottom" title="Like it!"><i class="fa fa-thumbs-up"></i>({{ likes }})</a>
+              <a class="btn btn-inverse btn-dislikeit" rel="tooltip" data-toggle="tooltip" data-placement="bottom" title="Unlike it!"><i class="fa fa-thumbs-down"></i>({{ dislikes }})</a>
+              <a class="btn btn-inverse btn-report" rel="tooltip" data-toggle="tooltip" data-placement="bottom" title="Report"><i class="fa fa-flag "></i>({{ spam }})</a>
 
       </div>
 
@@ -29,9 +29,9 @@
         <div class='btn-toolbar request-buttons'>
               <a class="btn btn-primary btn-success btn-request">Request</a>
               <a class="btn btn-danger btn-forget">Forget</a>
-              <a class="btn btn-inverse btn-profile" rel="tooltip" data-toggle="tooltip" data-placement="bottom" title="profile" ><i class="icon-user icon-white"></i></a>
-              <a class="btn btn-inverse btn-direction" rel="tooltip" data-toggle="tooltip" data-placement="bottom" title="directions"><i class="icon-map-marker icon-white"></i></a>
-              <a class="btn btn-inverse btn-share" rel="tooltip" data-toggle="tooltip" data-placement="bottom" title="share"><i class="icon-bell icon-white"></i></a>
+              <a class="btn btn-inverse btn-profile" rel="tooltip" data-toggle="tooltip" data-placement="bottom" title="profile" ><i class="fa fa-user"></i></a>
+              <a class="btn btn-inverse btn-direction" rel="tooltip" data-toggle="tooltip" data-placement="bottom" title="directions"><i class="fa fa-map-marker"></i></a>
+              <a class="btn btn-inverse btn-share" rel="tooltip" data-toggle="tooltip" data-placement="bottom" title="share"><i class="fa fa-bell"></i></a>
         </div>
       </div>
 
