--- a/client/views/objects/objects.html
+++ b/client/views/objects/objects.html
@@ -1,25 +1,25 @@
 <template name="ObjectList">
   <div class="row">
-    <ul class="thumbnails" id="ul-content">
+    <div class="thumbnails" id="ul-content">
       {{#each objects}}
-        <li>
+        <div class="col-xs-12 col-sm-6 col-md-4">
           {{> Object}}
-        </li>
+        </div>
       {{/each}}
-    </ul>
+    </div>
   </div>
 </template>
 
 <template name="Object">
-    <div class="thumbnail front">
+    <div class="thumbnail object">
       <div class="img" style="background-image:url({{image}})">
         <div class="map" id="map-canvas"></div>
         <div class="profile" id="profile-canvas"></div>
       </div>
-      <div class='btn-toolbar like-buttons'>
-              <a class="btn btn-inverse btn-likeit" rel="tooltip" data-toggle="tooltip" data-placement="bottom" title="Like it!"><i class="fa fa-thumbs-up"></i>({{ likes }})</a>
-              <a class="btn btn-inverse btn-dislikeit" rel="tooltip" data-toggle="tooltip" data-placement="bottom" title="Unlike it!"><i class="fa fa-thumbs-down"></i>({{ dislikes }})</a>
-              <a class="btn btn-inverse btn-report" rel="tooltip" data-toggle="tooltip" data-placement="bottom" title="Report"><i class="fa fa-flag "></i>({{ spam }})</a>
+      <div class='text-center'>
+        <a class="btn btn-inverse btn-likeit" rel="tooltip" data-toggle="tooltip" data-placement="bottom" title="Like it!"><i class="fa fa-thumbs-up"></i>({{ likes }})</a>
+        <a class="btn btn-inverse btn-dislikeit" rel="tooltip" data-toggle="tooltip" data-placement="bottom" title="Unlike it!"><i class="fa fa-thumbs-down"></i>({{ dislikes }})</a>
+        <a class="btn btn-inverse btn-report" rel="tooltip" data-toggle="tooltip" data-placement="bottom" title="Report"><i class="fa fa-flag "></i>({{ spam }})</a>
 
       </div>
 
