--- a/client/views/chat/chat.html
+++ b/client/views/chat/chat.html
@@ -1,11 +1,10 @@
 <template name="Chat">
-    {{#with chat}}
     <div class="panel panel-primary">
           <div class="panel-heading">
-              <span class="glyphicon glyphicon-comment"></span> Chat
+              <span class="fa fa-comment"></span> Chat
               <div class="btn-group pull-right">
                   <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
-                      <span class="glyphicon glyphicon-chevron-down"></span>
+                      <span class="fa fa-arrow-down"></span>
                   </button>
                   <ul class="dropdown-menu slidedown">
                       <li><a href="http://www.jquery2dotnet.com"><span class="glyphicon glyphicon-refresh">
@@ -24,32 +23,35 @@
           </div>
           <div class="panel-body">
               <ul class="chat">
+                {{#with chat}}
+
                   {{#each messages}}
                       <li class="left clearfix"><span class="chat-img pull-left">
-                          <img src="http://placehold.it/50/55C1E7/fff&text=U" alt="User Avatar" class="img-circle" />
+                          <img src="{{userPicture}}" alt="User Avatar" class="img-circle" />
                       </span>
                           <div class="chat-body clearfix">
                               <div class="header">
-                                  <strong class="primary-font">{{user_id}}</strong> <small class="pull-right text-muted">
-                                      <span class="glyphicon glyphicon-time"></span>{{date}}</small>
+                                  <strong class="primary-font">{{userName}}</strong> <small class="pull-right text-muted">
+                                      <span class="fa fa-time"></span>{{momentFrom date}}</small>
                               </div>
                               <p>
                                   {{message}}
                               </p>
                           </div>
                       </li>
-                    {{/each}}
+                  {{/each}}
+                {{/with}}
+
               </ul>
           </div>
           <div class="panel-footer">
               <div class="input-group">
                   <input id="btn-input" type="text" class="form-control input-sm" placeholder="Type your message here..." />
                   <span class="input-group-btn">
-                      <button class="btn btn-warning btn-sm" id="btn-chat">
+                      <button class="btn btn-warning btn-sm" type="submit" id="btn-chat">
                           Send</button>
                   </span>
               </div>
           </div>
         </div>
-    {{/with}}
 </template>
