added routes name for links

--- a/client/views/header.html
+++ b/client/views/header.html
@@ -34,7 +34,7 @@
         {{/if}}
 
         <ul class="nav navbar-nav navbar-right">
-          <li class="{{ isActiveRoute 'home' }}"><a href="{{ pathFor 'home' }}"><i class="fa fa-home"></i> Home</a></li>
+          <li class="{{ isActiveRoute 'ObjectList' }}"><a href="{{ pathFor 'ObjectList' }}"><i class="fa fa-home"></i> Objects</a></li>
           <li class="{{ isActivePath 'dashboard' }}"><a href="{{ pathFor 'dashboard' }}"><i class="fa fa-gear"></i> Dashboard</a></li>
         </ul>
       </div>
